Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -157,7 +157,7 @@ nav:after {
 
 #mobileSearch .input-group-append,
 #desktopSearch .input-group-append {
-    align-self: stretch;
+    /*align-self: stretch;*/
     background: violet;
 }
 
